@@ -6,10 +6,18 @@ include_directories (${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BIN
 qt4_automoc(${qtcurve_SRCS})
 add_library(qtcurve SHARED ${qtcurve_SRCS})
 set_target_properties(qtcurve PROPERTIES PREFIX "")
-target_link_libraries(qtcurve ${QT_QTGUI_LIBRARY} ${QT_QTCORE_LIBRARY} ${X11_X11_LIB})
+
+if (QTC_MODIFY_QFILEDIALOG_CALLS)
+        message("\n\n**************************************************************\n"
+                "Warning: You have enabled the option for QtCurve to override Qt's \n"
+                "         file dialogs with KDE's. This feature is experimental - and\n"
+                "         currently causes crashes in Qt Designer.\n"
+                "**************************************************************\n\n\n")
+    set(QTC_KFILEDIALOG_LIBS ${KDE4_KDEUI_LIBS} ${KDE4_KIO_LIBS} ${KDE4_KDECORE_LIBS} ${KDE4_KFILE_LIBS})
+endif (QTC_MODIFY_QFILEDIALOG_CALLS)
+
+target_link_libraries(qtcurve ${QTC_KFILEDIALOG_LIBS} ${QT_QTGUI_LIBRARY} ${QT_QTCORE_LIBRARY} ${X11_X11_LIB})
 install(TARGETS qtcurve DESTINATION ${QTCURVE_STYLE_DIR})
 if (KDE4_FOUND)
     install(FILES qtcurve.themerc DESTINATION ${DATA_INSTALL_DIR}/kstyle/themes)
 endif (KDE4_FOUND)
-
-
